@@ -25,6 +25,8 @@ import lombok.Value;
 import password.pwm.PwmAboutProperty;
 import password.pwm.PwmApplication;
 import password.pwm.PwmConstants;
+import password.pwm.PwmDomain;
+import password.pwm.bean.DomainID;
 import password.pwm.config.PwmSetting;
 import password.pwm.config.option.DataStorageMethod;
 import password.pwm.error.PwmUnrecoverableException;
@@ -33,10 +35,13 @@ import password.pwm.http.ContextManager;
 import password.pwm.http.bean.DisplayElement;
 import password.pwm.i18n.Admin;
 import password.pwm.i18n.Display;
+import password.pwm.ldap.LdapConnectionService;
 import password.pwm.svc.PwmService;
 import password.pwm.svc.node.NodeInfo;
+import password.pwm.svc.node.NodeService;
 import password.pwm.svc.sessiontrack.SessionTrackService;
 import password.pwm.util.i18n.LocaleHelper;
+import password.pwm.util.java.CollectionUtil;
 import password.pwm.util.java.FileSystemUtility;
 import password.pwm.util.java.JavaHelper;
 import password.pwm.util.java.PwmNumberFormat;
@@ -44,6 +49,7 @@ import password.pwm.util.java.StringUtil;
 import password.pwm.util.java.TimeDuration;
 import password.pwm.util.localdb.LocalDB;
 import password.pwm.util.localdb.LocalDBException;
+import password.pwm.util.logging.LocalDBLogger;
 import password.pwm.util.logging.PwmLogger;
 
 import java.io.Serializable;
@@ -54,10 +60,12 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Optional;
 import java.util.TreeMap;
 
 
@@ -69,13 +77,31 @@ public class AppDashboardData implements Serializable
     private static final PwmLogger LOGGER = PwmLogger.forClass( AppDashboardData.class );
 
     @Value
-    public static class ServiceData implements Serializable
+    public static class ServiceData implements Serializable, Comparable<ServiceData>
     {
+        private static final Comparator<ServiceData> COMPARATOR = Comparator.comparing(
+                ServiceData::getDomainID,
+                Comparator.nullsLast( Comparator.naturalOrder() ) )
+                .thenComparing(
+                        ServiceData::getName,
+                        Comparator.nullsLast( Comparator.naturalOrder() ) )
+                .thenComparing(
+                        ServiceData::getStatus,
+                        Comparator.nullsLast( Comparator.naturalOrder() ) );
+
+        private String guid;
+        private DomainID domainID;
         private String name;
         private PwmService.STATUS status;
         private Collection<DataStorageMethod> storageMethod;
         private List<HealthRecord> health;
         private Map<String, String> debugData;
+
+        @Override
+        public int compareTo( final ServiceData otherServiceData )
+        {
+            return COMPARATOR.compare( this, otherServiceData );
+        }
     }
 
     @Value
@@ -112,13 +138,13 @@ public class AppDashboardData implements Serializable
     private List<NodeData> nodeData;
     private String nodeSummary;
     private DataStorageMethod nodeStorageMethod;
-    private int ldapConnectionCount;
+    private long ldapConnectionCount;
     private int sessionCount;
     private int requestsInProgress;
 
 
     public static AppDashboardData makeDashboardData(
-            final PwmApplication pwmApplication,
+            final PwmDomain pwmDomain,
             final ContextManager contextManager,
             final Locale locale,
             final Flag... flags
@@ -128,14 +154,14 @@ public class AppDashboardData implements Serializable
         final Instant startTime = Instant.now();
 
         final AppDashboardDataBuilder builder = AppDashboardData.builder();
-        builder.about( makeAboutData( pwmApplication, contextManager, locale ) );
-        builder.services( getServiceData( pwmApplication ) );
-        builder.localDbInfo( makeLocalDbInfo( pwmApplication, locale ) );
-        builder.javaAbout( makeAboutJavaData( pwmApplication, locale ) );
+        builder.about( makeAboutData( pwmDomain, contextManager, locale ) );
+        builder.services( makeServiceData( pwmDomain.getPwmApplication() ) );
+        builder.localDbInfo( makeLocalDbInfo( pwmDomain, locale ) );
+        builder.javaAbout( makeAboutJavaData( pwmDomain, locale ) );
 
         if ( JavaHelper.enumArrayContainsValue( flags, Flag.IncludeLocalDbTableSizes ) )
         {
-            builder.localDbSizes( makeLocalDbTableSizes( pwmApplication, locale ) );
+            builder.localDbSizes( makeLocalDbTableSizes( pwmDomain, locale ) );
         }
         else
         {
@@ -151,165 +177,158 @@ public class AppDashboardData implements Serializable
             builder.threads( Collections.emptyList() );
         }
 
-        builder.nodeData = makeNodeData( pwmApplication, locale );
-        builder.nodeSummary = pwmApplication.getClusterService().isMaster()
+        builder.nodeData = makeNodeData( pwmDomain, locale );
+        builder.nodeSummary = pwmDomain.getPwmApplication().getNodeService().isMaster()
                 ? "This node is the current master"
                 : "This node is not the current master";
         {
-            final Collection<DataStorageMethod> dataStorageMethods = pwmApplication.getClusterService().serviceInfo().getStorageMethods();
-            if ( !JavaHelper.isEmpty( dataStorageMethods ) )
+            final Collection<DataStorageMethod> dataStorageMethods = pwmDomain.getPwmApplication().getNodeService().serviceInfo().getStorageMethods();
+            if ( !CollectionUtil.isEmpty( dataStorageMethods ) )
             {
                 builder.nodeStorageMethod = dataStorageMethods.iterator().next();
             }
         }
 
-        builder.ldapConnectionCount( ldapConnectionCount( pwmApplication ) );
-        builder.sessionCount( pwmApplication.getSessionTrackService().sessionCount() );
-        builder.requestsInProgress( pwmApplication.getActiveServletRequests().get() );
+        builder.ldapConnectionCount( LdapConnectionService.totalLdapConnectionCount( pwmDomain.getPwmApplication() ) );
+        builder.sessionCount( pwmDomain.getSessionTrackService().sessionCount() );
+        builder.requestsInProgress( pwmDomain.getPwmApplication().getActiveServletRequests().get() );
 
-        LOGGER.trace( () -> "AppDashboardData bean created in ", () -> TimeDuration.fromCurrent( startTime ) );
+        LOGGER.trace( () -> "AppDashboardData bean created", () -> TimeDuration.fromCurrent( startTime ) );
         return builder.build();
     }
 
-    private static int ldapConnectionCount( final PwmApplication pwmApplication )
-    {
-        return pwmApplication.getLdapConnectionService().connectionCount();
-    }
-
     private static List<DisplayElement> makeAboutData(
-            final PwmApplication pwmApplication,
+            final PwmDomain pwmDomain,
             final ContextManager contextManager,
             final Locale locale
     )
     {
-        final LocaleHelper.DisplayMaker l = new LocaleHelper.DisplayMaker( locale, Admin.class, pwmApplication );
-        final String notApplicableValue = Display.getLocalizedMessage( locale, Display.Value_NotApplicable, pwmApplication.getConfig() );
+        final LocaleHelper.DisplayMaker l = new LocaleHelper.DisplayMaker( locale, Admin.class, pwmDomain );
+        final String notApplicableValue = Display.getLocalizedMessage( locale, Display.Value_NotApplicable, pwmDomain.getConfig() );
         final PwmNumberFormat numberFormat = PwmNumberFormat.forLocale( locale );
 
-        final List<DisplayElement> aboutData = new ArrayList<>();
-        aboutData.add( new DisplayElement(
+        return List.of( new DisplayElement(
                 "appVersion",
                 DisplayElement.Type.string,
                 l.forKey( "Field_AppVersion", PwmConstants.PWM_APP_NAME ),
                 PwmConstants.SERVLET_VERSION
-        ) );
-        aboutData.add( new DisplayElement(
+        ), new DisplayElement(
                 "appBuildTime",
                 DisplayElement.Type.timestamp,
                 l.forKey( "Field_AppBuildTime" ),
                 PwmConstants.BUILD_TIME
-        ) );
-        aboutData.add( new DisplayElement(
+        ), new DisplayElement(
                 "currentTime",
                 DisplayElement.Type.timestamp,
                 l.forKey( "Field_CurrentTime" ),
                 JavaHelper.toIsoDate( Instant.now() )
-        ) );
-        aboutData.add( new DisplayElement(
+        ), new DisplayElement(
                 "startupTime",
                 DisplayElement.Type.timestamp,
                 l.forKey( "Field_StartTime" ),
-                JavaHelper.toIsoDate( pwmApplication.getStartupTime() )
-        ) );
-        aboutData.add( new DisplayElement(
+                JavaHelper.toIsoDate( pwmDomain.getPwmApplication().getStartupTime() )
+        ), new DisplayElement(
                 "runningDuration",
                 DisplayElement.Type.string,
                 l.forKey( "Field_UpTime" ),
-                TimeDuration.fromCurrent( pwmApplication.getStartupTime() ).asLongString( locale )
-        ) );
-        aboutData.add( new DisplayElement(
+                TimeDuration.fromCurrent( pwmDomain.getPwmApplication().getStartupTime() ).asLongString( locale )
+        ), new DisplayElement(
                 "installTime",
                 DisplayElement.Type.timestamp,
                 l.forKey( "Field_InstallTime" ),
-                JavaHelper.toIsoDate( pwmApplication.getInstallTime() )
-        ) );
-        aboutData.add( new DisplayElement(
+                JavaHelper.toIsoDate( pwmDomain.getPwmApplication().getInstallTime() )
+        ), new DisplayElement(
                 "siteURL",
                 DisplayElement.Type.string,
                 l.forKey( "Field_SiteURL" ),
-                pwmApplication.getConfig().readSettingAsString( PwmSetting.PWM_SITE_URL )
-        ) );
-        aboutData.add( new DisplayElement(
+                pwmDomain.getConfig().getAppConfig().readSettingAsString( PwmSetting.PWM_SITE_URL )
+        ), new DisplayElement(
                 "instanceID",
                 DisplayElement.Type.string,
                 l.forKey( "Field_InstanceID" ),
-                pwmApplication.getInstanceID()
-        ) );
-        aboutData.add( new DisplayElement(
+                pwmDomain.getPwmApplication().getInstanceID()
+        ), new DisplayElement(
                 "configRestartCounter",
                 DisplayElement.Type.number,
                 "Configuration Restart Counter",
                 contextManager == null ? notApplicableValue : numberFormat.format( contextManager.getRestartCount() )
-        ) );
-        aboutData.add( new DisplayElement(
+        ), new DisplayElement(
                 "chaiApiVersion",
                 DisplayElement.Type.string,
                 l.forKey( "Field_ChaiAPIVersion" ),
                 com.novell.ldapchai.ChaiConstant.CHAI_API_VERSION
         ) );
-
-        return Collections.unmodifiableList( aboutData );
     }
 
-    private static List<ServiceData> getServiceData( final PwmApplication pwmApplication )
+    public static List<ServiceData> makeServiceData( final PwmApplication pwmApplication )
+            throws PwmUnrecoverableException
     {
-        final Map<String, ServiceData> returnData = new TreeMap<>();
-        for ( final PwmService pwmService : pwmApplication.getPwmServices() )
+        final List<ServiceData> returnData = new ArrayList<>();
+        for ( final Map.Entry<DomainID, List<PwmService>> domainIDListEntry : pwmApplication.getAppAndDomainPwmServices().entrySet() )
         {
-            final PwmService.ServiceInfo serviceInfo = pwmService.serviceInfo();
-            final Collection<DataStorageMethod> storageMethods = serviceInfo == null
-                    ? Collections.emptyList()
-                    : serviceInfo.getStorageMethods() == null
-                    ? Collections.emptyList()
-                    : serviceInfo.getStorageMethods();
+            final DomainID domainID = domainIDListEntry.getKey();
+            for ( final PwmService pwmService : domainIDListEntry.getValue() )
+            {
+                final PwmService.ServiceInfo serviceInfo = pwmService.serviceInfo();
+                final Collection<DataStorageMethod> storageMethods = serviceInfo == null
+                        ? Collections.emptyList()
+                        : serviceInfo.getStorageMethods() == null
+                                ? Collections.emptyList()
+                                : serviceInfo.getStorageMethods();
 
-            final Map<String, String> debugData = serviceInfo == null
-                    ? Collections.emptyMap()
-                    : serviceInfo.getDebugProperties() == null
-                    ? Collections.emptyMap()
-                    : serviceInfo.getDebugProperties();
+                final Map<String, String> debugData = serviceInfo == null
+                        ? Collections.emptyMap()
+                        : serviceInfo.getDebugProperties() == null
+                                ? Collections.emptyMap()
+                                : serviceInfo.getDebugProperties();
 
-            returnData.put( pwmService.getClass().getSimpleName(), new ServiceData(
-                    pwmService.getClass().getSimpleName(),
-                    pwmService.status(),
-                    storageMethods,
-                    pwmService.healthCheck(),
-                    debugData
-            ) );
+                final String guid = pwmApplication.getSecureService().hash( domainID + pwmService.getClass().getSimpleName() );
+
+                returnData.add( new ServiceData(
+                        guid,
+                        domainID,
+                        pwmService.getClass().getSimpleName(),
+                        pwmService.status(),
+                        storageMethods,
+                        pwmService.healthCheck(),
+                        debugData
+                ) );
+            }
         }
 
-        return Collections.unmodifiableList( new ArrayList<>( returnData.values() ) );
+        Collections.sort( returnData );
+        return List.copyOf( returnData );
     }
 
-    private static List<DisplayElement> makeLocalDbInfo( final PwmApplication pwmApplication, final Locale locale )
+    private static List<DisplayElement> makeLocalDbInfo( final PwmDomain pwmDomain, final Locale locale )
             throws PwmUnrecoverableException
     {
         final List<DisplayElement> localDbInfo = new ArrayList<>();
-        final String notApplicable = Display.getLocalizedMessage( locale, Display.Value_NotApplicable, pwmApplication.getConfig() );
+        final String notApplicable = Display.getLocalizedMessage( locale, Display.Value_NotApplicable, pwmDomain.getConfig() );
         final PwmNumberFormat numberFormat = PwmNumberFormat.forLocale( locale );
 
         localDbInfo.add( new DisplayElement(
                 "worlistSize",
                 DisplayElement.Type.number,
                 "Word List Dictionary Size",
-                numberFormat.format( pwmApplication.getWordlistService().size() )
+                numberFormat.format( pwmDomain.getPwmApplication().getWordlistService().size() )
         ) );
 
         localDbInfo.add( new DisplayElement(
                 "seedlistSize",
                 DisplayElement.Type.number,
                 "Seed List Dictionary Size",
-                numberFormat.format( pwmApplication.getSeedlistManager().size() )
+                numberFormat.format( pwmDomain.getPwmApplication().getSeedlistManager().size() )
         ) );
 
         localDbInfo.add( new DisplayElement(
                 "sharedHistorySize",
                 DisplayElement.Type.number,
                 "Shared Password History Size",
-                numberFormat.format( pwmApplication.getSharedHistoryManager().size() )
+                numberFormat.format( pwmDomain.getSharedHistoryManager().size() )
         ) );
         {
-            final Instant oldestEntryAge = pwmApplication.getSharedHistoryManager().getOldestEntryTime();
+            final Instant oldestEntryAge = pwmDomain.getSharedHistoryManager().getOldestEntryTime();
             final String display = oldestEntryAge == null
                     ? notApplicable
                     : TimeDuration.fromCurrent( oldestEntryAge ).asCompactString();
@@ -324,30 +343,30 @@ public class AppDashboardData implements Serializable
                 "emailQueueSize",
                 DisplayElement.Type.number,
                 "Email Queue Size",
-                numberFormat.format( pwmApplication.getEmailQueue().queueSize() )
+                numberFormat.format( pwmDomain.getPwmApplication().getEmailQueue().queueSize() )
         ) );
         localDbInfo.add( new DisplayElement(
                 "smsQueueSize",
                 DisplayElement.Type.number,
                 "SMS Queue Size",
-                numberFormat.format( pwmApplication.getSmsQueue().queueSize() )
+                numberFormat.format( pwmDomain.getPwmApplication().getSmsQueue().queueSize() )
         ) );
         localDbInfo.add( new DisplayElement(
                 "sharedHistorySize",
                 DisplayElement.Type.number,
                 "Syslog Queue Size",
-                String.valueOf( pwmApplication.getAuditManager().syslogQueueSize() )
+                String.valueOf( pwmDomain.getAuditService().syslogQueueSize() )
         ) );
         localDbInfo.add( new DisplayElement(
                 "localAuditRecords",
                 DisplayElement.Type.number,
                 "Audit Records",
-                pwmApplication.getAuditManager().sizeToDebugString()
+                pwmDomain.getAuditService().sizeToDebugString()
         ) );
         {
-            final Instant eldestAuditRecord = pwmApplication.getAuditManager().eldestVaultRecord();
-            final String display = eldestAuditRecord != null
-                    ? TimeDuration.fromCurrent( eldestAuditRecord ).asLongString()
+            final Optional<Instant> eldestAuditRecord = pwmDomain.getAuditService().eldestVaultRecord();
+            final String display = eldestAuditRecord.isPresent()
+                    ? TimeDuration.fromCurrent( eldestAuditRecord.get() ).asLongString()
                     : notApplicable;
             localDbInfo.add( new DisplayElement(
                     "oldestLocalAuditRecords",
@@ -360,11 +379,13 @@ public class AppDashboardData implements Serializable
                 "logEvents",
                 DisplayElement.Type.number,
                 "Log Events",
-                pwmApplication.getLocalDBLogger().sizeToDebugString()
+                pwmDomain.getPwmApplication().getLocalDBLogger().sizeToDebugString()
         ) );
         {
-            final String display = pwmApplication.getLocalDBLogger() != null && pwmApplication.getLocalDBLogger().getTailDate() != null
-                    ? TimeDuration.fromCurrent( pwmApplication.getLocalDBLogger().getTailDate() ).asLongString()
+            final LocalDBLogger localDBLogger = pwmDomain.getPwmApplication().getLocalDBLogger();
+            final String display = localDBLogger != null
+                    && localDBLogger.getTailDate().isPresent()
+                    ? TimeDuration.fromCurrent( localDBLogger.getTailDate().get() ).asLongString()
                     : notApplicable;
             localDbInfo.add( new DisplayElement(
                     "oldestLogEvents",
@@ -374,12 +395,12 @@ public class AppDashboardData implements Serializable
             ) );
         }
         {
-            final String display = pwmApplication.getLocalDB() == null
+            final String display = pwmDomain.getPwmApplication().getLocalDB() == null
                     ? notApplicable
-                    : pwmApplication.getLocalDB().getFileLocation() == null
-                    ? notApplicable
-                    : StringUtil.formatDiskSize( FileSystemUtility.getFileDirectorySize(
-                    pwmApplication.getLocalDB().getFileLocation() ) );
+                    : pwmDomain.getPwmApplication().getLocalDB().getFileLocation() == null
+                            ? notApplicable
+                            : StringUtil.formatDiskSize( FileSystemUtility.getFileDirectorySize(
+                                    pwmDomain.getPwmApplication().getLocalDB().getFileLocation() ) );
             localDbInfo.add( new DisplayElement(
                     "localDbSizeOnDisk",
                     DisplayElement.Type.string,
@@ -388,11 +409,11 @@ public class AppDashboardData implements Serializable
             ) );
         }
         {
-            final String display = pwmApplication.getLocalDB() == null
+            final String display = pwmDomain.getPwmApplication().getLocalDB() == null
                     ? notApplicable
-                    : pwmApplication.getLocalDB().getFileLocation() == null
-                    ? notApplicable
-                    : StringUtil.formatDiskSize( FileSystemUtility.diskSpaceRemaining( pwmApplication.getLocalDB().getFileLocation() ) );
+                    : pwmDomain.getPwmApplication().getLocalDB().getFileLocation() == null
+                            ? notApplicable
+                            : StringUtil.formatDiskSize( FileSystemUtility.diskSpaceRemaining( pwmDomain.getPwmApplication().getLocalDB().getFileLocation() ) );
             localDbInfo.add( new DisplayElement(
                     "localDbFreeSpace",
                     DisplayElement.Type.string,
@@ -405,12 +426,12 @@ public class AppDashboardData implements Serializable
     }
 
     private static Map<LocalDB.DB, String> makeLocalDbTableSizes(
-            final PwmApplication pwmApplication,
+            final PwmDomain pwmDomain,
             final Locale locale
     )
     {
         final Map<LocalDB.DB, String> returnData = new LinkedHashMap<>();
-        final LocalDB localDB = pwmApplication.getLocalDB();
+        final LocalDB localDB = pwmDomain.getPwmApplication().getLocalDB();
         final PwmNumberFormat numberFormat = PwmNumberFormat.forLocale( locale );
         try
         {
@@ -428,13 +449,13 @@ public class AppDashboardData implements Serializable
 
 
     private static List<DisplayElement> makeAboutJavaData(
-            final PwmApplication pwmApplication,
+            final PwmDomain pwmDomain,
             final Locale locale
     )
     {
-        final Map<PwmAboutProperty, String> aboutMap = PwmAboutProperty.makeInfoBean( pwmApplication );
+        final Map<PwmAboutProperty, String> aboutMap = PwmAboutProperty.makeInfoBean( pwmDomain.getPwmApplication() );
         final List<DisplayElement> javaInfo = new ArrayList<>();
-        final String notApplicable = Display.getLocalizedMessage( locale, Display.Value_NotApplicable, pwmApplication.getConfig() );
+        final String notApplicable = Display.getLocalizedMessage( locale, Display.Value_NotApplicable, pwmDomain.getConfig() );
 
         {
             final List<PwmAboutProperty> interestedProperties = Arrays.asList(
@@ -467,8 +488,8 @@ public class AppDashboardData implements Serializable
         {
             final PwmNumberFormat numberFormat = PwmNumberFormat.forLocale( locale );
 
-            final String display = numberFormat.format( pwmApplication.getResourceServletService().itemsInCache() )
-                    + " items (" + numberFormat.format( pwmApplication.getResourceServletService().bytesInCache() ) + " bytes)";
+            final String display = numberFormat.format( pwmDomain.getResourceServletService().itemsInCache() )
+                    + " items (" + numberFormat.format( pwmDomain.getResourceServletService().bytesInCache() ) + " bytes)";
 
             javaInfo.add( new DisplayElement(
                     "resourceFileServletCacheSize",
@@ -482,11 +503,11 @@ public class AppDashboardData implements Serializable
                 "resourceFileServletCacheHitRatio",
                 DisplayElement.Type.string,
                 "ResourceFileServlet Cache Hit Ratio",
-                pwmApplication.getResourceServletService().cacheHitRatio().pretty( 2 )
+                pwmDomain.getResourceServletService().cacheHitRatio().pretty( 2 )
         ) );
 
         {
-            final Map<SessionTrackService.DebugKey, String> debugInfoMap = pwmApplication.getSessionTrackService().getDebugData();
+            final Map<SessionTrackService.DebugKey, String> debugInfoMap = pwmDomain.getSessionTrackService().getDebugData();
 
             javaInfo.add( new DisplayElement(
                     "sessionTotalSize",
@@ -519,25 +540,26 @@ public class AppDashboardData implements Serializable
                     JavaHelper.threadInfoToString( threadInfo )
             ) );
         }
-        return Collections.unmodifiableList( new ArrayList<>( returnData.values() ) );
+        return List.copyOf( returnData.values() );
     }
 
     private static List<NodeData> makeNodeData(
-            final PwmApplication pwmApplication,
+            final PwmDomain pwmDomain,
             final Locale locale
     )
     {
-        if ( pwmApplication.getClusterService().status() != PwmService.STATUS.OPEN )
+        final NodeService nodeService = pwmDomain.getPwmApplication().getNodeService();
+        if ( nodeService.status() != PwmService.STATUS.OPEN )
         {
             return Collections.emptyList();
         }
 
-        final String notApplicable = Display.getLocalizedMessage( locale, Display.Value_NotApplicable, pwmApplication.getConfig() );
+        final String notApplicable = Display.getLocalizedMessage( locale, Display.Value_NotApplicable, pwmDomain.getConfig() );
         final List<NodeData> nodeData = new ArrayList<>();
 
         try
         {
-            for ( final NodeInfo nodeInfo : pwmApplication.getClusterService().nodes() )
+            for ( final NodeInfo nodeInfo : nodeService.nodes() )
             {
 
                 final String uptime = nodeInfo.getStartupTime() == null
