@@ -20,12 +20,15 @@
 
 package password.pwm.http.servlet.resource;
 
+import edu.umd.cs.findbugs.annotations.NonNull;
+import lombok.Value;
 import org.webjars.WebJarAssetLocator;
-import password.pwm.config.Configuration;
+import password.pwm.config.DomainConfig;
 import password.pwm.config.PwmSetting;
 import password.pwm.error.ErrorInformation;
 import password.pwm.error.PwmError;
 import password.pwm.error.PwmUnrecoverableException;
+import password.pwm.http.HttpContentType;
 import password.pwm.http.HttpHeader;
 import password.pwm.http.PwmHttpRequestWrapper;
 import password.pwm.util.java.StringUtil;
@@ -34,14 +37,15 @@ import password.pwm.util.logging.PwmLogger;
 import javax.servlet.ServletContext;
 import javax.servlet.http.HttpServletRequest;
 import java.io.File;
-import java.io.IOException;
 import java.io.InputStream;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.regex.Matcher;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
@@ -50,26 +54,31 @@ class ResourceFileRequest
 {
     private static final PwmLogger LOGGER = PwmLogger.forClass( ResourceFileRequest.class );
 
-    private static final Map<String, String> WEB_JAR_VERSION_MAP = Collections.unmodifiableMap( new HashMap<>( new WebJarAssetLocator().getWebJars() ) );
+    private static final Map<String, String> WEB_JAR_VERSION_MAP = Map.copyOf( new WebJarAssetLocator().getWebJars() );
 
     /** Contains a list of all resources (files) found inside the resources folder of all JARs in the WAR's classpath. **/
     private static final Collection<String> WEB_JAR_ASSET_LIST = Collections.unmodifiableCollection( new ArrayList<>( new WebJarAssetLocator().listAssets() ) );
 
+    private final DomainConfig domainConfig;
     private final HttpServletRequest httpServletRequest;
-    private final Configuration configuration;
     private final ResourceServletConfiguration resourceServletConfiguration;
 
-    private FileResource fileResource;
+    private final Optional<FileResource> fileResource;
 
     ResourceFileRequest(
-            final Configuration configuration,
-            final ResourceServletConfiguration resourceServletConfiguration,
-            final HttpServletRequest httpServletRequest
+            @NonNull final DomainConfig domainConfig,
+            @NonNull final ResourceServletConfiguration resourceServletConfiguration,
+            @NonNull final HttpServletRequest httpServletRequest
     )
+            throws PwmUnrecoverableException
     {
-        this.configuration = configuration;
+        this.domainConfig = domainConfig;
         this.resourceServletConfiguration = resourceServletConfiguration;
         this.httpServletRequest = httpServletRequest;
+
+        final String resourcePathUri = this.getRequestURI();
+        final ServletContext servletContext = this.getHttpServletRequest().getServletContext();
+        fileResource = resolveRequestedResource( domainConfig, servletContext, resourcePathUri, resourceServletConfiguration );
     }
 
     HttpServletRequest getHttpServletRequest()
@@ -95,35 +104,36 @@ class ResourceFileRequest
         return acceptsCompression ? rawContentType : rawContentType + ";charset=UTF-8";
     }
 
-    FileResource getRequestedFileResource()
+    Optional<FileResource> getRequestedFileResource()
             throws PwmUnrecoverableException
     {
-        if ( fileResource == null )
-        {
-            final String resourcePathUri = this.getRequestURI();
-            final ServletContext servletContext = this.getHttpServletRequest().getServletContext();
-            fileResource = resolveRequestedResource( configuration, servletContext, resourcePathUri, resourceServletConfiguration );
-        }
         return fileResource;
     }
 
     private String getRawMimeType()
             throws PwmUnrecoverableException
     {
-        final String filename = getRequestedFileResource().getName();
-        final String contentType = this.httpServletRequest.getServletContext().getMimeType( filename );
-        if ( contentType == null )
+        if ( fileResource.isPresent() )
         {
-            if ( filename.endsWith( ".woff2" ) )
+            final String filename = fileResource.get().getName();
+            final String contentType = this.httpServletRequest.getServletContext().getMimeType( filename );
+            if ( contentType == null )
             {
-                return "font/woff2";
+                if ( filename.endsWith( ".woff2" ) )
+                {
+                    return "font/woff2";
+                }
             }
+
+            // If content type is unknown, then set the default value.
+            // For all content types, see: http://www.w3schools.com/media/media_mimeref.asp
+            // To add new content types, add new mime-mapping entry in web.xml.
+            return contentType == null
+                    ? HttpContentType.octetstream.getMimeType()
+                    : contentType;
         }
 
-        // If content type is unknown, then set the default value.
-        // For all content types, see: http://www.w3schools.com/media/media_mimeref.asp
-        // To add new content types, add new mime-mapping entry in web.xml.
-        return contentType == null ? "application/octet-stream" : contentType;
+        return HttpContentType.octetstream.getMimeType();
     }
 
     boolean allowsCompression()
@@ -136,7 +146,9 @@ class ResourceFileRequest
             final String contentType = getRawMimeType();
             if ( contentType.startsWith( "text" ) || contentType.contains( "javascript" ) )
             {
-                final PwmHttpRequestWrapper pwmHttpRequestWrapper = new PwmHttpRequestWrapper( httpServletRequest, configuration );
+                final PwmHttpRequestWrapper pwmHttpRequestWrapper = new PwmHttpRequestWrapper(
+                        httpServletRequest,
+                        domainConfig.getAppConfig() );
                 final String acceptEncoding = pwmHttpRequestWrapper.readHeaderValueAsString( HttpHeader.AcceptEncoding );
                 return acceptEncoding != null && accepts( acceptEncoding, "gzip" );
             }
@@ -169,198 +181,204 @@ class ResourceFileRequest
         return requestURI.substring( httpServletRequest.getContextPath().length() );
     }
 
-    static FileResource resolveRequestedResource(
-            final Configuration configuration,
+    static String deriveEffectiveURI(
+            final DomainConfig domainConfig,
+            final String inputResourcePathUri
+    )
+    {
+        // URL-decode the file name (might contain spaces and on) and prepare file object.
+        String effectiveUri = StringUtil.urlDecode( inputResourcePathUri );
+
+        // parse out the session key...
+        if ( effectiveUri.contains( ";" ) )
+        {
+            effectiveUri = effectiveUri.substring( 0, effectiveUri.indexOf( ";" ) );
+        }
+
+        if ( domainConfig.getAppConfig().isMultiDomain() )
+        {
+            final String domainPrefix = "/" + domainConfig.getDomainID().stringValue();
+            if ( effectiveUri.startsWith( domainPrefix ) )
+            {
+                effectiveUri = effectiveUri.substring( domainPrefix.length() );
+            }
+        }
+
+        return effectiveUri;
+    }
+
+    static Optional<FileResource> resolveRequestedResource(
+            final DomainConfig domainConfig,
             final ServletContext servletContext,
-            final String resourcePathUri,
+            final String inputResourcePathUri,
             final ResourceServletConfiguration resourceServletConfiguration
     )
             throws PwmUnrecoverableException
     {
+        final String effectiveUri = deriveEffectiveURI( domainConfig, inputResourcePathUri );
 
-        // URL-decode the file name (might contain spaces and on) and prepare file object.
-        String filename = StringUtil.urlDecode( resourcePathUri );
-
-        // parse out the session key...
-        if ( filename.contains( ";" ) )
+        if ( !effectiveUri.startsWith( ResourceFileServlet.RESOURCE_PATH ) )
         {
-            filename = filename.substring( 0, filename.indexOf( ";" ) );
-        }
-
-
-        if ( !filename.startsWith( ResourceFileServlet.RESOURCE_PATH ) )
-        {
-            final String filenameFinal = filename;
-            LOGGER.warn( () -> "illegal url request to " + filenameFinal );
+            LOGGER.warn( () -> "illegal url request to " + effectiveUri );
             throw new PwmUnrecoverableException( new ErrorInformation( PwmError.ERROR_SERVICE_NOT_AVAILABLE, "illegal url request" ) );
         }
 
+        final ResourceRequestContext context = new ResourceRequestContext( effectiveUri, domainConfig, resourceServletConfiguration, servletContext );
+        for ( final ResourceUriResolver resourceUriResolver : RESOLVERS )
         {
-            final String embedThemeUrl = ResourceFileServlet.RESOURCE_PATH
-                    + ResourceFileServlet.THEME_CSS_PATH.replace( ResourceFileServlet.TOKEN_THEME, ResourceFileServlet.EMBED_THEME );
-            final String embedThemeMobileUrl = ResourceFileServlet.RESOURCE_PATH
-                    + ResourceFileServlet.THEME_CSS_MOBILE_PATH.replace( ResourceFileServlet.TOKEN_THEME, ResourceFileServlet.EMBED_THEME );
-
-            if ( filename.equalsIgnoreCase( embedThemeUrl ) )
-            {
-                return new ConfigSettingFileResource( PwmSetting.DISPLAY_CSS_EMBED, configuration, filename );
-            }
-            else if ( filename.equalsIgnoreCase( embedThemeMobileUrl ) )
-            {
-                return new ConfigSettingFileResource( PwmSetting.DISPLAY_CSS_MOBILE_EMBED, configuration, filename );
-            }
-        }
-
-
-        {
-            final FileResource resource = handleWebjarURIs( servletContext, resourcePathUri );
-            if ( resource != null )
+            final Optional<FileResource> resource = resourceUriResolver.resolveUri( context );
+            if ( resource.isPresent() )
             {
                 return resource;
             }
         }
 
+        return Optional.empty();
+    }
+
+    @Value
+    private static class ResourceRequestContext
+    {
+        private final String uri;
+        private final DomainConfig domainConfig;
+        private final ResourceServletConfiguration resourceServletConfiguration;
+        private final ServletContext servletContext;
+    }
+
+    private interface ResourceUriResolver
+    {
+        Optional<FileResource> resolveUri( ResourceRequestContext resourceRequestContext )
+                throws PwmUnrecoverableException;
+    }
+
+    private static final List<ResourceUriResolver> RESOLVERS = List.of(
+            new ThemeUriResolver(),
+            new BuiltInZipFileUriResolver(),
+            new WebJarUriResolver(),
+            new RealFileUriResolver(),
+            new CustomZipFileUriResolver()
+    );
+
+    private static class ThemeUriResolver implements ResourceUriResolver
+    {
+        @Override
+        public Optional<FileResource> resolveUri( final ResourceRequestContext resourceRequestContext )
         {
+            final String effectiveUri = resourceRequestContext.getUri();
+            final DomainConfig domainConfig = resourceRequestContext.getDomainConfig();
+
+            final String embedThemeUrl = ResourceFileServlet.RESOURCE_PATH
+                    + ResourceFileServlet.THEME_CSS_PATH.replace( ResourceFileServlet.TOKEN_THEME, ResourceFileServlet.EMBED_THEME );
+            final String embedThemeMobileUrl = ResourceFileServlet.RESOURCE_PATH
+                    + ResourceFileServlet.THEME_CSS_MOBILE_PATH.replace( ResourceFileServlet.TOKEN_THEME, ResourceFileServlet.EMBED_THEME );
+
+            if ( effectiveUri.equalsIgnoreCase( embedThemeUrl ) )
+            {
+                return Optional.of( new ConfigSettingFileResource( PwmSetting.DISPLAY_CSS_EMBED, domainConfig, effectiveUri ) );
+            }
+            else if ( effectiveUri.equalsIgnoreCase( embedThemeMobileUrl ) )
+            {
+                return Optional.of( new ConfigSettingFileResource( PwmSetting.DISPLAY_CSS_MOBILE_EMBED, domainConfig, effectiveUri ) );
+            }
+
+            return Optional.empty();
+        }
+    }
+
+    private static class BuiltInZipFileUriResolver implements ResourceUriResolver
+    {
+        @Override
+        public Optional<FileResource> resolveUri( final ResourceRequestContext resourceRequestContext )
+                throws PwmUnrecoverableException
+        {
+            final String effectiveUri = resourceRequestContext.getUri();
+            final ResourceServletConfiguration resourceServletConfiguration = resourceRequestContext.getResourceServletConfiguration();
+
             // check files system zip files.
             final Map<String, ZipFile> zipResources = resourceServletConfiguration.getZipResources();
             for ( final Map.Entry<String, ZipFile> entry : zipResources.entrySet() )
             {
                 final String path = entry.getKey();
-                if ( filename.startsWith( path ) )
+                if ( effectiveUri.startsWith( path ) )
                 {
-                    final String zipSubPath = filename.substring( path.length() + 1 );
+                    final String zipSubPath = effectiveUri.substring( path.length() + 1 );
                     final ZipFile zipFile = entry.getValue();
                     final ZipEntry zipEntry = zipFile.getEntry( zipSubPath );
                     if ( zipEntry != null )
                     {
-                        return new ZipFileResource( zipFile, zipEntry );
+                        return Optional.of( new ZipFileResource( zipFile, zipEntry ) );
                     }
                 }
-                if ( filename.startsWith( zipResources.get( path ).getName() ) )
+                if ( effectiveUri.startsWith( zipResources.get( path ).getName() ) )
                 {
-                    final String filenameFinal = filename;
-                    LOGGER.warn( () -> "illegal url request to " + filenameFinal + " zip resource" );
+                    LOGGER.warn( () -> "illegal url request to " + effectiveUri + " zip resource" );
                     throw new PwmUnrecoverableException( new ErrorInformation( PwmError.ERROR_SERVICE_NOT_AVAILABLE, "illegal url request" ) );
                 }
             }
+
+            return Optional.empty();
         }
-
-        // convert to file.
-        final String filePath = servletContext.getRealPath( filename );
-        final File file = new File( filePath );
-
-        // figure top-most path allowed by request
-        final String parentDirectoryPath = servletContext.getRealPath( ResourceFileServlet.RESOURCE_PATH );
-        final File parentDirectory = new File( parentDirectoryPath );
-
-        FileResource fileSystemResource = null;
-        {
-            //verify the requested page is a child of the servlet resource path.
-            int recursions = 0;
-            File recurseFile = file.getParentFile();
-            while ( recurseFile != null && recursions < 100 )
-            {
-                if ( parentDirectory.equals( recurseFile ) )
-                {
-                    fileSystemResource = new RealFileResource( file );
-                    break;
-                }
-                recurseFile = recurseFile.getParentFile();
-                recursions++;
-            }
-        }
-
-        if ( fileSystemResource == null )
-        {
-            LOGGER.warn( () -> "attempt to access file outside of servlet path " + file.getAbsolutePath() );
-            throw new PwmUnrecoverableException( new ErrorInformation( PwmError.ERROR_SERVICE_NOT_AVAILABLE, "illegal file path request" ) );
-        }
-
-        if ( !fileSystemResource.exists() )
-        {
-            // check custom (configuration defined) zip file bundles
-            final Map<String, FileResource> customResources = resourceServletConfiguration.getCustomFileBundle();
-            for ( final Map.Entry<String, FileResource> entry : customResources.entrySet() )
-            {
-                final String customFileName = entry.getKey();
-                final String testName = ResourceFileServlet.RESOURCE_PATH + "/" + customFileName;
-                if ( testName.equals( resourcePathUri ) )
-                {
-                    return entry.getValue();
-                }
-            }
-        }
-
-        return fileSystemResource;
     }
 
-    private static FileResource handleWebjarURIs(
-            final ServletContext servletContext,
-            final String resourcePathUri
-    )
-            throws PwmUnrecoverableException
+    private static class WebJarUriResolver implements ResourceUriResolver
     {
-        if ( resourcePathUri.startsWith( ResourceFileServlet.WEBJAR_BASE_URL_PATH ) )
+        @Override
+        public Optional<FileResource> resolveUri( final ResourceRequestContext resourceRequestContext )
         {
-            // This allows us to override a webjar file, if needed.  Mostly helpful during development.
-            final File file = new File( servletContext.getRealPath( resourcePathUri ) );
-            if ( file.exists() )
-            {
-                return new RealFileResource( file );
-            }
+            final String effectiveUri = resourceRequestContext.getUri();
+            final ServletContext servletContext = resourceRequestContext.getServletContext();
 
-            final String remainingPath = resourcePathUri.substring( ResourceFileServlet.WEBJAR_BASE_URL_PATH.length() );
-
-            final String webJarName;
-            final String webJarPath;
+            if ( effectiveUri.startsWith( ResourceFileServlet.WEBJAR_BASE_URL_PATH ) )
             {
-                final int slashIndex = remainingPath.indexOf( "/" );
-                if ( slashIndex < 0 )
+                // This allows us to override a webjar file, if needed.  Mostly helpful during development.
+                final File file = new File( servletContext.getRealPath( effectiveUri ) );
+                if ( file.exists() )
                 {
-                    return null;
+                    return Optional.of( new RealFileResource( file ) );
                 }
-                webJarName = remainingPath.substring( 0, slashIndex );
-                webJarPath = remainingPath.substring( slashIndex + 1 );
-            }
 
-            final String versionString = WEB_JAR_VERSION_MAP.get( webJarName );
-            if ( versionString == null )
-            {
-                return null;
-            }
+                final String remainingPath = effectiveUri.substring( ResourceFileServlet.WEBJAR_BASE_URL_PATH.length() );
 
-            final String fullPath = ResourceFileServlet.WEBJAR_BASE_FILE_PATH + "/" + webJarName + "/" + versionString + "/" + webJarPath;
-            if ( WEB_JAR_ASSET_LIST.contains( fullPath ) )
-            {
-                final ClassLoader classLoader = servletContext.getClassLoader();
-                final InputStream inputStream = classLoader.getResourceAsStream( fullPath );
-
-                if ( inputStream != null )
+                final String webJarName;
+                final String webJarPath;
                 {
-                    return new InputStreamFileResource( inputStream, fullPath );
+                    final int slashIndex = remainingPath.indexOf( "/" );
+                    if ( slashIndex < 0 )
+                    {
+                        return Optional.empty();
+                    }
+                    webJarName = remainingPath.substring( 0, slashIndex );
+                    webJarPath = remainingPath.substring( slashIndex + 1 );
+                }
+
+                final String versionString = WEB_JAR_VERSION_MAP.get( webJarName );
+                if ( versionString == null )
+                {
+                    return Optional.empty();
+                }
+
+                final String fullPath = ResourceFileServlet.WEBJAR_BASE_FILE_PATH + "/" + webJarName + "/" + versionString + "/" + webJarPath;
+                if ( WEB_JAR_ASSET_LIST.contains( fullPath ) )
+                {
+                    final ClassLoader classLoader = servletContext.getClassLoader();
+                    final InputStream inputStream = classLoader.getResourceAsStream( fullPath );
+
+                    if ( inputStream != null )
+                    {
+                        return Optional.of( new InputStreamFileResource( inputStream, fullPath ) );
+                    }
                 }
             }
+
+            return Optional.empty();
         }
-
-        return null;
     }
 
+    @Value
     private static class InputStreamFileResource implements FileResource
     {
         private final InputStream inputStream;
-        private final String fullPath;
-
-        InputStreamFileResource( final InputStream inputStream, final String fullPath )
-        {
-            this.inputStream = inputStream;
-            this.fullPath = fullPath;
-        }
-
-        @Override
-        public InputStream getInputStream( ) throws IOException
-        {
-            return inputStream;
-        }
+        private final String name;
 
         @Override
         public long length( )
@@ -369,23 +387,92 @@ class ResourceFileRequest
         }
 
         @Override
-        public long lastModified( )
+        public Instant lastModified( )
         {
-            return 0;
-        }
-
-        @Override
-        public boolean exists( )
-        {
-            return true;
-        }
-
-        @Override
-        public String getName( )
-        {
-            return fullPath;
+            return Instant.EPOCH;
         }
     }
+
+
+    private static class RealFileUriResolver implements ResourceUriResolver
+    {
+        @Override
+        public Optional<FileResource> resolveUri( final ResourceRequestContext resourceRequestContext )
+                throws PwmUnrecoverableException
+        {
+            final String effectiveUri = resourceRequestContext.getUri();
+            final ServletContext servletContext = resourceRequestContext.getServletContext();
+
+            // convert to file.
+            final String filePath = servletContext.getRealPath( effectiveUri );
+            final File file = new File( filePath );
+
+            if ( file.exists() )
+            {
+                verifyPath( file, servletContext );
+
+                return Optional.of( new RealFileResource( file ) );
+            }
+
+            return Optional.empty();
+        }
+
+        private void verifyPath(
+                final File file,
+                final ServletContext servletContext
+        )
+                throws PwmUnrecoverableException
+        {
+            // figure top-most path allowed by request
+            final String parentDirectoryPath = servletContext.getRealPath( ResourceFileServlet.RESOURCE_PATH );
+            final File parentDirectory = new File( parentDirectoryPath );
+
+            {
+                //verify the requested page is a child of the servlet resource path.
+                int recursions = 0;
+                File recurseFile = file.getParentFile();
+                while ( recurseFile != null && recursions < 100 )
+                {
+                    if ( parentDirectory.equals( recurseFile ) )
+                    {
+                        return;
+                    }
+                    recurseFile = recurseFile.getParentFile();
+                    recursions++;
+                }
+            }
+
+            LOGGER.warn( () -> "attempt to access file outside of servlet path " + file.getAbsolutePath() );
+            throw new PwmUnrecoverableException( new ErrorInformation( PwmError.ERROR_SERVICE_NOT_AVAILABLE, "illegal file path request" ) );
+        }
+    }
+
+    private static class CustomZipFileUriResolver implements ResourceUriResolver
+    {
+        @Override
+        public Optional<FileResource> resolveUri( final ResourceRequestContext resourceRequestContext )
+                throws PwmUnrecoverableException
+        {
+            final String effectiveUri = resourceRequestContext.getUri();
+            final ResourceServletConfiguration resourceServletConfiguration = resourceRequestContext.getResourceServletConfiguration();
+
+            // check custom (configuration defined) zip file bundles
+            final Map<String, FileResource> customResources = resourceServletConfiguration.getCustomFileBundle();
+            for ( final Map.Entry<String, FileResource> entry : customResources.entrySet() )
+            {
+                final String customFileName = entry.getKey();
+                final String testName = ResourceFileServlet.RESOURCE_PATH + "/" + customFileName;
+                if ( testName.equals( effectiveUri ) )
+                {
+                    return Optional.of( entry.getValue() );
+                }
+            }
+
+            return Optional.empty();
+        }
+    }
+
+
 
     /**
      * Returns true if the given accept header accepts the given value.
